# aspendos-deploy

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .vercelignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  SPEC.md  START_GUIDE.md  agentic_rag_analysis.md  agentic_rag_langchain.md  aspendos_complete_spec.md  aspendos_frontend.md  aspendos_full_gtm.md  aspendos_memory_code.md  biome.json  clerk_nextjs16_tutorial.md  docker-compose.yml  package.json  pnpm-workspace.yaml  railway.json  skills-lock.json  tsconfig.json  turbo.json  vercel.json
.claude/: settings.json
.factory/: init 4.sh  services 2.yaml
.github/: DEPLOYMENT.md
.projects/: state.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
convex/: actionLog.ts  approvals 2.ts  approvals 3.ts  approvals.ts  auth.config.ts  authHelpers.ts  byokCredentials 4.ts  byokCredentials.ts  commits 2.ts  commits.ts  compliance.ts  conversations 2.ts  conversations.ts  convex.config 4.ts  governance.ts  memories 2.ts  memories.ts  messages 2.ts  messages.ts  organizations 4.ts  organizations.ts  schema.ts  snapshots 5.ts  snapshots.ts  subscriptions 2.ts  subscriptions 5.ts  subscriptions.ts  toolAllowlist 2.ts  toolAllowlist.ts  toolRegistry.ts  tsconfig.json  users 3.ts  users.ts  workflows 2.ts  workflows.ts
deploy/: .env.production  .env.production.example  Caddyfile  Caddyfile.backend  docker-compose.selfhosted.yml  docker-compose.yml
docs/: LEGACY_DOCS.md  P0-P5_READINESS_PLAN.md  PRODUCTION_SPINE_DEMO.md
klaros/: aspendos-import.json  pyproject.toml
klaros/obsidian-vault/.obsidian/: graph.json  workspace.json
klaros/src/klaros/: cli.py
klaros/src/klaros/exporters/: __init__.py  aspendos_exporter.py  base.py  json_exporter.py
klaros/src/klaros/loaders/: __init__.py  base.py
klaros/src/klaros/processors/: cleaner.py  privacy.py  tagger.py
klaros/test-output/: aspendos-import.json
planning/: agentic_rag_code.md  aspendos-architecture-guide.md  aspendos_full_gtm.md  aspendos_memory_design.md  aspendos_quick_ref.md  aspendos_scalable.md  aspendos_tech_spec.md  db_choose.md  financial_model.md  network-product-90-day-plan.txt  network-product-issue-backlog-v1.txt  network-product-sprint-01-02.txt  product_ux_plan.md
scripts/: benchmark_web_dev.sh  (+17 more)
(+946 files in other folders)
